Move activation position

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -324,6 +324,7 @@ footer {
 }
 
 
+
 /* account_activations */
 #copyButton {
   background-color: white;
@@ -333,6 +334,21 @@ footer {
   font-size: 16px;
   font-weight: bold;
 }
+
+.over-18 {
+  padding-bottom: 5%;
+}
+
+.over-18 input[type=checkbox] {
+  transform: scale(1.8);
+}
+
+.over-18 label{
+  padding: 8px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 
 
 /* logged in */
