--- a/app/views/matches/not_logged_in.html.erb
+++ b/app/views/matches/not_logged_in.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "超リアル派マッチングアプリ") %>
 <% content_for(:not_logged_in, 1) %>
-
+<header>
+  <%= render 'shared/popup' %>
+</header>
 <div class="initial__viewport">
   <div class="main__container">
     <h2>指先の恋からさようなら</h2>
@@ -22,7 +24,7 @@
     </div>
   </div>
   <div class="btn__container">
-    <p><%= link_to "アカウントをつくる", signup_path, class: "btn btn-signup" %></p>
+    <p><%= link_to "アカウントをつくる", activation_path, class: "btn btn-signup" %></p>
     <p><%= link_to "ログインはこちら" ,login_path, class: "login_link" %></p>
   </div>
 </div>
