--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,7 +1,12 @@
 <h1>Potara</h1>
 
 <p>
-  Potaraへのご登録ありがとうございます！　下記のURLをタップしてアカウントを認証しましょう。
+  Potaraへのご登録ありがとうございます！
+</p>
+
+<p>
+  <b>ブラウザアプリ（Google ChromeやSafari）でリンクを開き、アカウントを認証しましょう。</b>
+  <br><br>(SNSやメール付属のブラウザではご利用できません。)
 </p>
 
 <%= link_to "認証してアカウントを作成する", edit_account_activation_url(@user.activation_token,
