--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,3 +1,7 @@
-Potaraへのご登録ありがとうございます！　下記のURLをタップしてアカウントを認証しましょう。
+Potaraへのご登録ありがとうございます。
+
+ブラウザアプリ（Google ChromeやSafari）でリンクを開き、アカウントを認証しましょう。
+
+(SNSやメール付属のブラウザではご利用できません。)
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
