--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,40 +1,34 @@
 <% provide(:title, "新規登録") %>
 
 <div class="main__container usersNew__form">
-  <h3>プロフィールを入力</h3>
-  <%= form_with(model: @user) do |f| %>
+  <h2>プロフィールを入力</h2>
+  <%= form_with(model: @user, url: "/signup/#{@user.id}", method: :patch) do |f| %>
 
-  <label>あなたの性別</label>
+  <label>性別</label>
   <div class="usersNew__field gender">
     <%= f.radio_button :girl, 0 %>
-    <%= f.label :girl, "男", for: "user_girl_0" %>
+    <%= f.label :girl, image_tag('male.png', class: "gender-icon"), for: "user_girl_0" %>
     <%= f.radio_button :girl, 1 %>
-    <%= f.label :girl, "女", for: "user_girl_1" %>
+    <%= f.label :girl, image_tag('venus.png', class: "gender-icon"), for: "user_girl_1" %>
   </div>
 
   <div class="usersNew__field">
     <%= f.label :name %>
-    <%= f.text_field :name, placeholder: "例: ポルコ(8文字以内)" %>
+    <%= f.text_field :name, placeholder: "例: ポルコ(8文字以内)", required: true %>
   </div>
 
   <div class="usersNew__field"> 
     <%= f.label :date_of_birth %>
-    <%= f.date_field :date_of_birth %>
+    <%= f.date_field :date_of_birth, required: true %>
   </div>
    
-  <!--
-  <div class="usersNew__field">
-    <%= f.label :email %>
-    <%= f.email_field :email, placeholder: "例: porco92@example.com" %>
-  </div>
-  -->
   <div class="usersNew__field">
     <%= f.label :password %>
-    <%= f.password_field :password, placeholder: "6文字以上" %>
+    <%= f.password_field :password, placeholder: "8文字以上", required: true %>
   </div>
   <div class="usersNew__field">
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, placeholder: "もう一度入力してください" %>
+    <%= f.password_field :password_confirmation, placeholder: "もう一度入力してください", required: true %>
   </div>
   <div class="usersNew__field btn__container">
     <%= f.submit "登録", class: "btn" %>
