Fix minor error

--- a/app/views/matches/not_logged_in.html.erb
+++ b/app/views/matches/not_logged_in.html.erb
@@ -68,7 +68,7 @@
   <p>オファーは45秒で消えてしまいます。<b>「今すぐ合う」</b>ボタンを押せば「いいね」をしたことになります。</p>
   <h3>6. 集合場所に行く</h3>
   <p>相手からも「いいね」が返ってくれば、マッチング成立です。<b>アプリが自動で集合場所と集合時間を決定します。</b>集合場所は近くにある駅の出口になります。すぐに向かいましょう。</p>
-  <%= image_tag 'meeting.jpg', class: "meeting__moment", class: "discription__image canva__dream" %>
+  <%= image_tag 'meeting.jpg', class: "meeting__moment discription__image canva__dream" %>
   <p>マッチング成立後は、一方が解除するまでお互いの位置情報が共有されます。</p>
   <p><%= link_to "アカウントをつくる", activation_path, class: "btn btn-signup", style: "margin: 0 auto;" %></p>
 
